// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstancesIndicator Renders with instances and no provision only once 1`] = `
<div
  class="instances-indicator"
>
  <div
    class=""
    style="display:inline"
    title="This Service Class is provisioned 3 times."
  >
    <div
      class="instances-indicator--general active"
    >
      3
    </div>
  </div>
</div>
`;

exports[`InstancesIndicator Renders with instances and provision only once 1`] = `
<div
  class="instances-indicator"
>
  <div
    class=""
    style="display:inline"
    title="You can provision this Service Class only once in a given Namespace. It is already provisioned in this Namespace."
  >
    <div
      class="instances-indicator--general active provision-once"
    >
      1
    </div>
  </div>
</div>
`;

exports[`InstancesIndicator Renders without instances and no provision only once 1`] = `
<div
  class="instances-indicator"
/>
`;

exports[`InstancesIndicator Renders without instances and provision only once 1`] = `
<div
  class="instances-indicator"
>
  <div
    class=""
    style="display:inline"
    title="You can provision this Service Class only once in a given Namespace."
  >
    <div
      class="instances-indicator--general provision-once"
    >
      1
    </div>
  </div>
</div>
`;
